--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
+*/.env
+/server/.env
 # dependencies
-/node_modules
+*/node_modules
 /.pnp
 .pnp.*
 .yarn/*
@@ -10,12 +11,17 @@
 !.yarn/releases
 !.yarn/versions
 
+#IDE
+*/.idea
+*/.vscode
+
+
 # testing
 /coverage
 
 # next.js
-/.next/
-/out/
+*/.next/
+*/out/
 
 # production
 /build
