--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.application.name=server
 spring.datasource.url=${db-url}
 spring.datasource.username=${db-username}
 spring.datasource.password=${db-password}
+spring.jpa.open-in-view=true
+spring.jpa.hibernate.ddl-auto=update
