--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,9 @@
     "axios": "^1.7.7",
     "js-cookie": "^2.2.1",
     "next": "15.0.2",
-    "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028"
+    "react": "^18.3.1",
+    "react-datepicker": "^7.5.0",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
