--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=server
-spring.datasource.url=${db-url}
-spring.datasource.username=${db-username}
-spring.datasource.password=${db-password}
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
 spring.jpa.open-in-view=true
 spring.jpa.hibernate.ddl-auto=update
